Some updates to it with new css and bootstrap

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Thasadith:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
 
@@ -51,12 +52,17 @@
 		<div class="row skills">
 			<h2 class="center-align skill-text">SKILLS</h2>
 		</div>
-		<div class="row">
-			<div class="col m3 s6 responsive-img"><img src="img\html5.png"></div>
-			<div class="col m3 s6 responsive-img"><img src="img\css3.png"></div>
-			<div class="col m3 s6 responsive-img"><img src="img\javascript.png"></div>
-			<div class="col m3 s6 responsive-img"><img src="img/nodejs.png"></div>
+		<div class="row text-center">
+			<div class="col col-md-4 sm-6 img-responsive html-img"><img style="width:75%;" src="img\html5.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive css-img"><img style="width:75%;" src="img\css3.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive js-img" ><img style="width:75%;" src="img\javascript.png"></div>
 		</div>
+		<div class="row">
+			<div class="col col-md-4 sm-6 img-responsive node-img"><img style="width:75%;" src="img/nodejs.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive jquery-img"><img style="width:75%;" src="img/jquery.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive bootstrap-img"><img style="width:75%;" src="img/bootstrap.png"></div>
+		</div>
+	</div>
 
 		<!-- <div class="HTML">
 			<img src="" style="width:200px;height:200px;"></div>
@@ -65,12 +71,28 @@
 		<div class="ARCGIS">
 			<img src="img\arcgis.png" style="width:200px;height:200px;"></div>
 	</div> -->
-
+<br>
+<br>
+<br>
 	<footer>
 		<div class="contact" id="contact">
 			<h2> CONTACT </h2>
 			<h5> #1.919.622.1998 </h5>
 			<h5> Email:RB054549@gmail.com </h5>
+			<form>
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Name</label>
+                  <input type="email" class="form-control" id="name" placeholder="John Snow">
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlSelect1">Email</label>
+                  <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1">Message</label>
+                  <textarea class="form-control" id="message" rows="3"></textarea>
+                </div>
+              </form>
 		</div>
 	</footer>
 
