--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <head>
 	<title>Ryan Brown Web Developer </title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Thasadith:400,700" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	
 
 
 </head>
@@ -47,23 +46,69 @@
 
 	<!--skills-->
 
-	<div class="container grid-container" id="skill-nav">
+	<div class="container grid-container">
 
 		<div class="row skills">
 			<h2 class="center-align skill-text">SKILLS</h2>
 		</div>
 		<div class="row text-center">
-			<div class="col col-md-4 sm-6 img-responsive html-img"><img style="width:75%;" src="img\html5.png"></div>
-			<div class="col col-md-4 sm-6 img-responsive css-img"><img style="width:75%;" src="img\css3.png"></div>
-			<div class="col col-md-4 sm-6 img-responsive js-img" ><img style="width:75%;" src="img\javascript.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive"><img class="html-img" style="width:75%;" src="img\html5.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive"><img class="css-img" style="width:50%;" src="img\css3.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive" ><img class="js-img" style="width:75%;" src="img\javascript.png"></div>
 		</div>
 		<div class="row">
-			<div class="col col-md-4 sm-6 img-responsive node-img"><img style="width:75%;" src="img/nodejs.png"></div>
-			<div class="col col-md-4 sm-6 img-responsive jquery-img"><img style="width:75%;" src="img/jquery.png"></div>
-			<div class="col col-md-4 sm-6 img-responsive bootstrap-img"><img style="width:75%;" src="img/bootstrap.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive"><img class="node-img" style="width:75%;" src="img/nodejs.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive"><img class="jquery-img" style="width:75%;" src="img/jquery.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive"><img class="bootstrap-img" style="width:60%;" src="img/bootstrap.png"></div>
 		</div>
 	</div>
+<br>
+<br> 
 
+	<!-- <div class="container grid-container"> -->
+			<div class="container grid-container">
+
+					<div class="row skills">
+						<h2 class="center-align skill-text">PROJECTS</h2>
+					</div>
+				</div>
+			<div class="card">
+				
+					<div class="card-image waves-effect waves-block waves-light">
+					  <img class="activator" src="img/farmersmarket.png">
+					</div>
+					<div class="card-content">
+					  <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+					  <p><a href="#">This is a link</a></p>
+					</div>
+					<br>
+					<div class="card-reveal">
+					  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+					  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+					</div>
+				  </div>
+				  <!-- line---------------------------------------------- -->
+				  <div class="card">
+						<h2 class="center-align skill-text-2">Projects</h2>
+						<div class="card-image waves-effect waves-block waves-light">
+						  <img class="activator" src="img/farmersmarket.png">
+						</div>
+						<div class="card-content">
+						  <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+						  <p><a href="#">This is a link</a></p>
+						</div>
+						<br>
+						<div class="card-reveal">
+						  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+						  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+						</div>
+					  </div>
+
+
+
+
+
+	</div>
 		<!-- <div class="HTML">
 			<img src="" style="width:200px;height:200px;"></div>
 		<div class="JS">
