--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Thasadith:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
 
@@ -21,7 +24,7 @@
 			<ul id="nav-mobile" class="left">
 				<li><a href="#">Home</a></li>
 				<li><a href="#skill-nav">Skills</a></li>
-				<li><a href="#">Projects</a></li>
+				<li><a href="#projects-nav">Projects</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</div>
@@ -33,10 +36,20 @@
 		<h7> Based in Raleigh, NC. </h7>
 		<br>
 		<br>
-		<h5> Hello! My name is Ryan. A little bit about me: <br> I have a Bachelors Degree in Geographical Information
+		<h5> Hello! My name is Ryan.</h5> 
+		<h5>A little bit about me: <br> I have a Bachelors Degree in Geographical Information
 			Systems (GIS). I recently jumped into the realm of web development and couldn't be more thrilled. I
 			currently build websites working with an advertising agency. I pride myself in hard work and polished
 			results. </h5>
+			<a href="https://www.linkedin.com/in/ryan-brown-13b198154/" target="_blank"><h1 class="fab fa-linkedin"></h1></a>
+			<a href="https://github.com/ryannbrown" target="_blank"><h1 class="fab fa-github"></h1></a>
+			<br>
+			<br>
+			<!-- <p>Contact Information:</p>
+			<p>Email Address: rb054549@gmail.com</p>
+			<p>Phone Number: 919-816-5074</p> -->
+			<a href="https://docs.google.com/document/d/e/2PACX-1vR13NCfsP9jEpNIq7WyIIly9twwLKtUtIjTBBIcFmRVMlLdYDo4XsKJWDDs1RUOBN67JPCyd5ZopwGA/pub" target=_blank><button class="btn btn-danger">Resume</button></a>
+
 		<!--
 	<br>
 	<button type="button">About Me</button>
@@ -49,17 +62,17 @@
 	<div class="container grid-container">
 
 		<div class="row skills">
-			<h2 class="center-align skill-text">SKILLS</h2>
+			<h2 class="center-align skill-text" id="skill-nav">SKILLS</h2>
 		</div>
 		<div class="row text-center">
-			<div class="col col-md-4 sm-6 img-responsive"><img class="html-img" style="width:75%;" src="img\html5.png"></div>
-			<div class="col col-md-4 sm-6 img-responsive"><img class="css-img" style="width:50%;" src="img\css3.png"></div>
-			<div class="col col-md-4 sm-6 img-responsive" ><img class="js-img" style="width:75%;" src="img\javascript.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive"><img class="html-img skillz" style="width:75%;" src="img\html5.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive"><img class="css-img skillz" style="width:50%;" src="img\css3.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive" ><img class="js-img skillz" style="width:75%;" src="img\javascript.png"></div>
 		</div>
 		<div class="row">
-			<div class="col col-md-4 sm-6 img-responsive"><img class="node-img" style="width:75%;" src="img/nodejs.png"></div>
-			<div class="col col-md-4 sm-6 img-responsive"><img class="jquery-img" style="width:75%;" src="img/jquery.png"></div>
-			<div class="col col-md-4 sm-6 img-responsive"><img class="bootstrap-img" style="width:60%;" src="img/bootstrap.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive"><img class="node-img skillz" style="width:75%;" src="img/nodejs.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive"><img class="jquery-img skillz" style="width:75%;" src="img/jquery.png"></div>
+			<div class="col col-md-4 sm-6 img-responsive"><img class="bootstrap-img skillz" style="width:60%;" src="img/bootstrap.png"></div>
 		</div>
 	</div>
 <br>
@@ -68,7 +81,7 @@
 	<!-- <div class="container grid-container"> -->
 			<div class="container grid-container">
 
-					<div class="row skills">
+					<div class="row skills" id="projects-nav">
 						<h2 class="center-align skill-text">PROJECTS</h2>
 					</div>
 				</div>
@@ -78,32 +91,54 @@
 					  <img class="activator" src="img/farmersmarket.png">
 					</div>
 					<div class="card-content">
-					  <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-					  <p><a href="#">This is a link</a></p>
+					  <span class="card-title activator grey-text text-darken-4">Fresh Finder<i class="material-icons right">info_outline</i></span>
+					  <p><a href="https://github.com/ryannbrown/Group-Project-1" target="_blank">Github Repo</a></p>
+					  <p><a href="https://ryannbrown.github.io/Group-Project-1/" target="_blank">Live Link</a></p>
 					</div>
 					<br>
 					<div class="card-reveal">
-					  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-					  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+					  <span class="card-title grey-text text-darken-4">Fresh Finder<i class="material-icons right">close</i></span>
+					  <p>Have you ever asked someone where the nearest farmers market is?</p>
+					  <p>This application is designed to find the nearest farmer's market based on zip code.</p>
+					  <p>The data comes from the USDA National Farmers Market Directory API.</p>
+					  <p>I also used the Google Javascripts My Maps API to compile data using geocoding.</p>
 					</div>
 				  </div>
 				  <!-- line---------------------------------------------- -->
 				  <div class="card">
-						<h2 class="center-align skill-text-2">Projects</h2>
 						<div class="card-image waves-effect waves-block waves-light">
-						  <img class="activator" src="img/farmersmarket.png">
+						  <img class="activator" src="img/train.png">
 						</div>
 						<div class="card-content">
-						  <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-						  <p><a href="#">This is a link</a></p>
+						  <span class="card-title activator grey-text text-darken-4">Train App Scheduler<i class="material-icons right">info_outline</i></span>
+						  <p><a href="https://github.com/ryannbrown/Train-Schedule-App">Github Repo</a></p>
+						  <p><a href="https://ryannbrown.github.io/Train-Schedule-App/" target="_blank">Live Link</a></p>
 						</div>
 						<br>
 						<div class="card-reveal">
-						  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-						  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+						  <span class="card-title grey-text text-darken-4">Train Scheduler App<i class="material-icons right">close</i></span>
+						  <p>This app uses Jquery, Firebase, and Moment.js to store train times and compute their next arrivals.</p>
+						  <p>Add a train, indicate when it begins running as well as the frequency that it runs. It will tell you when it arrives next.</p>
 						</div>
 					  </div>
-
+						<div class="card">
+				
+							<div class="card-image waves-effect waves-block waves-light">
+								<img class="activator" src="img/gify.png">
+							</div>
+							<div class="card-content">
+								<span class="card-title activator grey-text text-darken-4">Gif Search App<i class="material-icons right">info_outline</i></span>
+								<p><a href="https://github.com/ryannbrown/GifTastic" target="_blank">Github Repo</a></p>
+								<p><a href="https://ryannbrown.github.io/GifTastic/" target="_blank">Live Link</a></p>
+							</div>
+							<br>
+							<div class="card-reveal">
+								<span class="card-title grey-text text-darken-4">Gif Search App<i class="material-icons right">close</i></span>
+								<p>Want to find some new Gifs that you love?</p>
+								<p>Add a topic or choose from the list to enjoy some related gifs.</p>
+								<p>Data retrieved using the Giphy API.</p>
+							</div>
+							</div>
 
 
 
@@ -121,22 +156,21 @@
 <br>
 	<footer>
 		<div class="contact" id="contact">
-			<h2> CONTACT </h2>
-			<h5> #1.919.622.1998 </h5>
-			<h5> Email:RB054549@gmail.com </h5>
+			<h2>CONTACT</h2>
 			<form>
-                <div class="form-group">
+                <div class="form-group contact-form">
                   <label for="exampleFormControlInput1">Name</label>
                   <input type="email" class="form-control" id="name" placeholder="John Snow">
                 </div>
-                <div class="form-group">
+                <div class="form-group contact-form">
                   <label for="exampleFormControlSelect1">Email</label>
                   <input type="email" class="form-control" id="email" placeholder="name@example.com">
                 </div>
-                <div class="form-group">
+                <div class="form-group contact-form">
                   <label for="exampleFormControlTextarea1">Message</label>
                   <textarea class="form-control" id="message" rows="3"></textarea>
-                </div>
+								</div>
+								<button type="submit" class="btn button">Submit</button>
               </form>
 		</div>
 	</footer>
